selector issue on safari

--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -264,6 +264,17 @@ nav {
     letter-spacing: -0.02em;
     color: #2739b1;
     padding: 10px 20px;
+    /* fix safari issue */
+    -webkit-appearance: none; 
+    -moz-appearance: none;
+    appearance: none;
+    background-image: url("data:image/svg+xml,\
+      <svg version='1.1' xmlns='http://www.w3.org/2000/svg' width='14px'\
+           height='14px' viewBox='0 0 1200 1000' fill='rgb(51,51,51)'>\
+        <path d='M1100 411l-198 -199l-353 353l-353 -353l-197 199l551 551z'/>\
+      </svg>");
+    background-repeat: no-repeat;
+    background-position: calc(100% - 7px) 50%;
 }
 
 .content_ragister textarea {
